--- a/studio-integral/src/app/main/formacao-novo/formacao-novo.component.html
+++ b/studio-integral/src/app/main/formacao-novo/formacao-novo.component.html
@@ -278,14 +278,14 @@
           <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center">
             <ul class="lista-programacao">
               <li>24 e 25 - Setembro</li>
-              <li>22 e 23 - Outubro</li>
+              <li>29 e 30 - Outubro</li>
               <li>11 e 15 - Novembro - Retiro Cura e Chakras</li>
               <li>17 e 18 - Dezembro</li>
               <li>21 e 22 - Janeiro</li>
               <li>25 e 26 - Fevereiro</li>
               <li>25 e 26 - Março</li>
               <li>29 e 30 - Abril</li>
-              <li>27 e 28 - Abril</li>
+              <li>27 e 28 - Maio</li>
             </ul>
           </div>
           <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center text-programacao">
