--- a/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
+++ b/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
@@ -1,52 +1,19 @@
 <div class=" header">
   <img class="img-header" src="../assets/meditacao1.png" alt="">
   <div class="text-header">
-    <h1 class="main-text">Retiro de Meditação <br> Sri Vidya Tantra</h1>
-    <p class="sub-text">Venha viver essa transformação!</p>
+    <h1 class="main-text">Retiro de Meditação </h1>
+    <p class="sub-text">Descubra os segredos sobre a prática da meditação!</p>
   </div>
 </div>
 <div class="container">
   <div class="row d-flex justify-content-center">
-    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center my-4">
+    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center mt-4">
       <h1>O Retiro</h1>
-      <p class="text-center m-0">Neste retiro de dois dias o participante é convidado a vivenciar sua natureza real de
-        forma
-        profunda e
-        tranquila.
-        Através de práticas de pranayamas (respiração) e meditação, iremos atingir níveis de consciência mais profundo,
-        liberando o que nos prende as energias de sofrimento do passado, stress e ansiedade.
+      <p class="text-center m-0">Elimine, de uma vez por todas, a confusão mental e encontre a verdadeira paz interior
+        através do nosso retiro de iniciação à meditação.
+        Uma experiência de dois dias onde você irá aprender tudo sobre o universo desta prática milenar.
       </p>
-    </div>
-  </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col-12 col-lg-5 d-flex flex-column justify-content-center align-items-center">
-      <img class="img" src="../assets/durga.png" style="width: 250px;" alt="">
-    </div>
-    <div class="col-12 col-lg-5 mt-3 mt-lg-0 d-flex flex-column justify-content-center align-items-center">
-      <h1>O que é Tantra?</h1>
-      <p class="text-center">
-        O Tantra é uma filosofia milenar indiana que trata o equilíbrio da energia do corpo através de práticas de
-        meditação e respiração, levando o praticante a estados de harmonia, alegria e amor próprio.
-      </p>
-    </div>
-  </div>
-  <div class="row mt-4 d-flex justify-content-center">
-    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center">As principais Deusas do Tantra</h1>
-      <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center">
-        <img class="img" src="../assets/lalita.png" style="width: 250px;" alt="">
-        <strong class="my-2">Arquétipo das Deusas</strong>
-        <ul class="list-unstyled text-center ">
-          <li>Parvati - a fonte do Poder Divino</li>
-          <li>Durga - Poder de colocar fim</li>
-          <li>Jagabamba - Poder da Mãe Divina</li>
-          <li>Santoshima - Poder do Contentamento</li>
-          <li>Gayatri - Sabedoria</li>
-          <li>Sarasvati - Decisão</li>
-          <li>Kali - Realização</li>
-          <li>Lakshmi - Beleza</li>
-        </ul>
-      </div>
+      <p class="text-center mt-4"><b>Um passo a passo extremamente claro para você meditar com sucesso</b></p>
     </div>
   </div>
   <div class="row d-flex justify-content-center">
@@ -130,6 +97,41 @@
   </div>
   <div class="row ">
     <div class="col-12 d-flex justify-content-center">
+      <a href="/main/retiro-meditacao#compra" class="mt-2 btn-cta"> Eu quero participar!</a>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center mt-4">
+      <h1>A prática de meditação</h1>
+      <p class="text-center m-0">Hoje em dia é fácil pegar qualquer técnica de meditação em livros ou na internet e
+        fazer.
+        Mas porque estas técnicas não têm muito efeito?
+        Simplesmente por que há vários detalhes por trás da técnica que não são ensinados, detalhes que já se espera que
+        a
+        pessoa saiba. A maioria dos mestres não te explica esses detalhes.
+        E não porque eles não querem explicar. Mas porque, tradicionalmente, a prática da meditação é apresentada como
+        algo que não se ensina, mas que se observa.
+        O mestre só passa determinados conhecimentos ao seu discípulo depois de algum tempo,
+        quando ele percebe que o discípulo está pronto para receber aquilo.
+      </p>
+      <img src="../assets/meditando2.png" class="my-3 img-main" alt="">
+      <p class="text-center m-0">
+        Você aprende como uma criança, apenas observando o ambiente (no caso o mestre) ao seu redor.
+        E está tudo bem com esse tipo de aprendizado, é uma experiência profunda, encantadora e espiritual.
+        Mas ao mesmo tempo, sentimos a necessidade em nossos alunos de ter um acesso mais direto ao conhecimento por
+        trás das práticas de meditação. Para que finalmente eles saibam o porquê de cada prática, porque eles têm que
+        fazer determinado exercício e o mais importante, como fazer da maneira certa.</p>
+      <img src="../assets/meditando3.png" class="my-3 img-main" alt="">
+      <p class="text-center m-0"><b>
+          Foi disso que surgiu o nosso Retiro de Meditação, para que você finalmente consiga
+          meditar da forma certa e com sucesso.
+        </b> É um conhecimento muito valioso, que você não irá ouvir de qualquer
+        professor ou de qualquer mestre, justamente porque os mestres não tem o hábito de falar sobre isso.
+      </p>
+    </div>
+  </div>
+  <div class="row ">
+    <div class="col-12 d-flex justify-content-center">
       <a href="/main/retiro-meditacao#compra" class="my-5 btn-cta"> Eu quero participar!</a>
     </div>
   </div>
@@ -138,47 +140,31 @@
   <h1 class="text-center mb-4 pt-4">O que iremos aprender no retiro</h1>
   <div class="col-10 d-none d-lg-block">
     <div class="row mb-4 d-flex justify-content-center ">
-      <div class="col-6 col-lg-2">
+      <div class="col-lg-4">
         <p class="text-center num-aula">1</p>
         <p class="text-center text-aula">Princípios da meditação</p>
       </div>
-      <div class="col-6 col-lg-2">
+      <div class="col-lg-4">
         <p class="text-center num-aula">2</p>
         <p class="text-center text-aula">Técnicas de respiração</p>
       </div>
-      <div class="col-6 col-lg-2">
+      <div class="col-lg-4">
         <p class="text-center num-aula">3</p>
         <p class="text-center text-aula">Técnicas de meditação</p>
       </div>
-      <div class="col-6 col-lg-2">
+    </div>
+    <div class="row mb-4 d-flex justify-content-center">
+      <div class="col-lg-4">
         <p class="text-center num-aula">4</p>
         <p class="text-center text-aula">Mantras</p>
       </div>
-      <div class="col-6 col-lg-2">
+      <div class="col-lg-4">
         <p class="text-center num-aula">5</p>
-        <p class="text-center text-aula">Arquétipos das Deusas do Tantra</p>
-      </div>
-    </div>
-    <div class="row mb-4 d-flex justify-content-center">
-      <div class="col-6 col-lg-2">
-        <p class="text-center num-aula">6</p>
         <p class="text-center text-aula">Relaxamento profundo</p>
       </div>
-      <div class="col-6 col-lg-2">
-        <p class="text-center num-aula">7</p>
-        <p class="text-center text-aula">O que é o Tantra</p>
-      </div>
-      <div class="col-6 col-lg-2">
-        <p class="text-center num-aula">8</p>
-        <p class="text-center text-aula">O Tantra Tradicional e o Neo Tantra</p>
-      </div>
-      <div class="col-6 col-lg-2">
-        <p class="text-center num-aula">9</p>
+      <div class="col-lg-4">
+        <p class="text-center num-aula">6</p>
         <p class="text-center text-aula">O que é o ser</p>
-      </div>
-      <div class="col-6 col-lg-2">
-        <p class="text-center num-aula">10</p>
-        <p class="text-center text-aula">Princípios da Meditação</p>
       </div>
     </div>
     <img src="../assets/meditando1.png" style="width: 100%;" alt="">
@@ -206,27 +192,11 @@
       </div>
       <div class="col-6">
         <p class="text-center num-aula">5</p>
-        <p class="text-center text-aula">Arquétipos das Deusas do Tantra</p>
-      </div>
-      <div class="col-6">
-        <p class="text-center num-aula">6</p>
         <p class="text-center text-aula">Relaxamento profundo</p>
       </div>
       <div class="col-6">
-        <p class="text-center num-aula">7</p>
-        <p class="text-center text-aula">O que é o Tantra</p>
-      </div>
-      <div class="col-6">
-        <p class="text-center num-aula">8</p>
-        <p class="text-center text-aula">O Tantra Tradicional e o Neo Tantra</p>
-      </div>
-      <div class="col-6">
-        <p class="text-center num-aula">9</p>
+        <p class="text-center num-aula">6</p>
         <p class="text-center text-aula">O que é o ser</p>
-      </div>
-      <div class="col-6">
-        <p class="text-center num-aula">10</p>
-        <p class="text-center text-aula">Princípios da Meditação</p>
       </div>
     </div>
     <div class=" d-none d-md-block"><img src="../assets/meditando1.png" class="img-aulas" alt=""></div>
@@ -238,6 +208,20 @@
   </div>
 </div>
 <div class="container cronograma">
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 col-lg-10 d-flex flex-column justify-content-center align-items-center mt-4">
+      <h1>Os benefícios da meditação</h1>
+      <ul>
+        <li>Maior bem estar</li>
+        <li>Desenvolvimento de um estado de extremo relaxamento</li>
+        <li>Liberação de endorfina, o que também contribui para o bem estar mental e físico</li>
+        <li>Diminuição do Estresse</li>
+        <li>Alívio nos sintomas de ansiedade, depressão e pânico</li>
+        <li>Maior clareza mental para tomar decisões no dia a dia</li>
+        <li>Maior foco e disciplina nas atividades diárias</li>
+      </ul>
+    </div>
+  </div>
   <div class="row d-flex justify-content-center">
     <h1 class="my-4 text-center">Cronograma</h1>
     <div class="col-12 col-lg-5 d-flex flex-column justify-content-start align-items-start ">
@@ -290,8 +274,8 @@
           <p>Não há necessidade de ter prática anterior, nem precisa ser yogi, é para todos que querem aprender sobre
             esta
             filosofia de vida e iniciar sua jornada no caminho do autoconhecimento.</p>
-          <p>É para aqueles praticantes que gostariam de fortalecer seu sadhana e se conectar com a energia da Grande
-            Deusa.
+          <p>É para aqueles praticantes que gostariam de fortalecer seu sadhana e se conectar com a energia espiritual.
+
           </p>
         </div>
       </div>
@@ -313,8 +297,8 @@
           <p>Não há necessidade de ter prática anterior, nem precisa ser yogi, é para todos que querem aprender sobre
             esta
             filosofia de vida e iniciar sua jornada no caminho do autoconhecimento.</p>
-          <p>É para aqueles praticantes que gostariam de fortalecer seu sadhana e se conectar com a energia da Grande
-            Deusa.
+          <p>É para aqueles praticantes que gostariam de fortalecer seu sadhana e se conectar com a energia espiritual.
+
           </p>
         </div>
       </div>
@@ -350,22 +334,20 @@
 <div class="row  valores">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center pt-4" id="compra">
     <h1>Valores</h1>
-    <h3 class="subtitle-carrossel text-center">1° Lote até 15 de Setembro, reserve sua vaga!</h3>
     <div class=" row my-4 d-flex flex-column flex-lg-row justify-content-center align-items-center">
       <div class="col-12 col-lg-4 my-2">
         <div class="card-compra">
           <div class="card-content d-flex flex-column align-items-center justify-content-around">
             <p class="text-center"><strong>Quarto de Casal</strong></p>
             <hr>
-            <p>1° Lote</p>
-            <p>R$ 2.100,00</p>
-            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848634230/buy"
-              target="_blank" class="btn-cta pb-4">
-              Reservar</a>
-          </div>
-          <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
             <p>2° Lote</p>
             <p>R$ 2.320,00</p>
+            <!-- <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848634230/buy"
+              target="_blank" class="btn-cta pb-4">
+              Reservar</a> -->
+            <a href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20do%20Retiro%20Medita%C3%A7%C3%A3o%20-%20Quarto%20de%20casal"
+              target="_blank" class="btn-cta pb-4">
+              Reservar</a>
           </div>
         </div>
       </div>
@@ -374,16 +356,16 @@
           <div class="card-content d-flex flex-column align-items-center justify-content-around">
             <p class="text-center"><strong>Quarto com até 3 pessoas</strong></p>
             <hr>
-            <p>1° Lote</p>
-            <p>R$ 1.200,00</p>
-            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848482623/buy"
+            <p>2° Lote</p>
+            <p>R$ 1.380,00</p>
+            <!-- <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1660848482623/buy"
+              target="_blank" class="btn-cta pb-4">
+              Reservar</a> -->
+            <a href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20do%20Retiro%20Medita%C3%A7%C3%A3o%20-%20Quarto%20at%C3%A9%203%20pessoas"
               target="_blank" class="btn-cta pb-4">
               Reservar</a>
           </div>
-          <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
-            <p>2° Lote</p>
-            <p>R$ 1.380,00</p>
-          </div>
+
         </div>
       </div>
       <div class="col-12 col-lg-4 my-2">
@@ -391,19 +373,18 @@
           <div class="card-content d-flex flex-column align-items-center justify-content-around">
             <p class="text-center"><strong>Quarto com até 6 pessoas</strong></p>
             <hr>
-            <p>1° Lote</p>
-            <p>R$ 900,00</p>
-            <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1642182106383/buy"
-              target="_blank" class="btn-cta pb-4">
-              Reservar</a>
-          </div>
-          <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
             <p>2° Lote</p>
             <p>R$ 1.160,00</p>
+            <!-- <a href="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/memberships/61e1b88786588044e52db7a7/plan/1642182106383/buy"
+              target="_blank" class="btn-cta pb-4">
+              Reservar</a> -->
+            <a href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20do%20Retiro%20Medita%C3%A7%C3%A3o%20-%20Quarto%20at%C3%A9%206%20pessoas"
+              target="_blank" class="btn-cta pb-4">
+              Reservar</a>
           </div>
         </div>
       </div>
     </div>
-    <h5 class="subtitle-carrossel text-center mb-4">Entre em contato e veja opções de parcelamento.</h5>
+    <h5 class="subtitle-carrossel text-center mb-4">Pagamento até 6x com juros no cartão.</h5>
   </div>
 </div>
