--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -34,7 +34,8 @@
     <p><a href="https://g.page/studiointegralsp?share" target="_blank"><i class='bx bxs-map-pin icon-footer'></i></a>Rua
       Basílio da
       Cunha, 16 – Aclimação – São Paulo – SP</p>
-    <p><a class="nav-link" [routerLink]="['/main/codigo-de-etica']">Clique aqui e leia nosso Código de Ética</a>
+    <p><a class="nav-link" [routerLink]="['/main/codigo-de-etica']">Clique aqui e leia nosso Código de Ética e Política
+        de Reembolso</a>
     </p>
     <div class="col-12 d-flex justify-content-center align-items-center">
       <a href="https://www.youtube.com/c/WalNunes" target="_blank"><i class='bx bxl-youtube  icon-footer mx-4'></i></a>
