--- a/studio-integral/src/app/main/codigo-de-etica/codigo-de-etica.component.html
+++ b/studio-integral/src/app/main/codigo-de-etica/codigo-de-etica.component.html
@@ -1,44 +1,134 @@
+<div class="header d-flex align-items-end">
+  <div class="ms-5 d-flex flex-row align-items-end justify-content-start">
+    <ul class="nav nav-pills" id="pills-tab" role="tablist">
+      <li class="nav-item active">
+        <a class="nav-link  active" id="pills-codigo-tab" data-bs-toggle="pill" data-bs-target="#pills-codigo"
+          type="button" role="tab" aria-controls="pills-codigo" aria-selected="true">Código de Ética</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pills-politica-tab" data-bs-toggle="pill" data-bs-target="#pills-politica" type="button"
+          role="tab" aria-controls="pills-politica" aria-selected="false">Política de Reembolso</a>
+      </li>
+
+    </ul>
+  </div>
+</div>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-12 d-flex flex-column justidy-content-center align-items-center text-center mt-5 ">
-      <div class="conteudo">
-        <h1>Código de Consuta e Ética</h1>
-        <p> Seguindo as novas regras e orientações da Aliança Internacional de Yoga USA, criamos esta página para que
-          nossos alunos e parceiros estejam conscientes dos valores que nos unem e sustentam, de acordo com ensinamentos
-          dos mestres antigos citados em livros Sagrados como Yoga Sutras de Patanjali.</p>
+  <div class="tab-content" id="pills-tabContent">
+    <div class="tab-pane fade show active" id="pills-codigo" role="tabpanel" aria-labelledby="pills-codigo-tab">
+      <div class="row">
+        <div class="col-12 d-flex flex-column justidy-content-center align-items-center text-center mt-5 ">
+          <div class="conteudo">
+            <h1>Código de Consuta e Ética</h1>
+            <p> Seguindo as novas regras e orientações da Aliança Internacional de Yoga USA, criamos esta página para
+              que
+              nossos alunos e parceiros estejam conscientes dos valores que nos unem e sustentam, de acordo com
+              ensinamentos
+              dos mestres antigos citados em livros Sagrados como Yoga Sutras de Patanjali.</p>
+          </div>
+          <div class="div-imagem d-flex flex-column justidy-content-center align-items-center">
+            <img src="../assets/retiro6.jpeg" alt="" class="imagem-codigo">
+          </div>
+          <div class="conteudo">
+            <h5 class="mt-5">Código de Conduta:</h5>
+            <p>O propósito do nosso código de conduta é ajudar nossa equipe a servir seu papel com espírito puro e
+              proteger
+              nossos alunos e comunidade.</p>
+            <p>Não permitimos que nem um membro da nossa equipe, professores ou coordenadores, independente do contrato,
+              aluno ou visitante, maltrate qualquer pessoa por motivo de raça, etnia, cultura, nacionalidade, orientação
+              sexual, identidade de gênero ou deficiência.</p>
+
+            <h5 class="mt-5">Prevenção ao Assédio Sexual:</h5>
+            <p>Assédio é um termo que compreende ser inaceitável qualquer tipo de relacionamento íntimo envolvendo
+              aluno/professor, ou qualquer tipo de favor sexual em decorrência das atividades desenvolvidas em nosso
+              recinto.</p>
+
+            <h5 class="mt-5">Cláusulas Contratuais:</h5>
+            <p>O Tantra é conhecido por trabalhar diretamente com a energia sexual, POR ESSA RAZÃO O STUDIO INTEGRAL SP
+              SE
+              RESERVA AO DIREITO DE CONDICIONAR CLARAMENTE COMO PRÉ REQUISITO PARA CONTRATAÇÃO DE SEUS SERVIÇOS, QUE
+              TODO E
+              QUALQUER ALUNO <b>CONTRATANTE</b> SE ABSTENHA EXPRESSAMENTE DE ESTABELECER QUALQUER TIPO DE RELAÇÃO ÍNTIMA
+              OU
+              PESSOAL
+              COM OS PROFISSIONAIS QUE ATUAM DIRETA OU INDIRETAMENTE PARA A CONTRATADA, ANTES, DURANTE OU DEPOIS DA
+              REALIZAÇÃO DE AULAS, CURSOS OU RETIROS.</p>
+
+            <h5 class="mt-5">Prevenção à Má Conduta Sexual:</h5>
+            <p>É inaceitável a má conduta sexual nos ambientes de aulas, cursos e eventos realizados pelo Studio
+              Integral SP
+            </p>
+            <p>Má conduta sexual se refere a qualquer tipo de requerimento que envolva favores sexuais, toque sexual e
+              verbal, visual, ou conduta física que crie um ambiente hostil no ambiente da escola.</p>
+
+            <h5 class="mt-5">Política de Reclamação:</h5>
+            <p>Quaisquer denúncias ou reclamações deverão ser formalizadas através do e-mail
+              contato@studiointegral.com.br
+              ou reportadas diretamente ao professor responsável pelo curso.</p>
+          </div>
+        </div>
       </div>
-      <div class="div-imagem d-flex flex-column justidy-content-center align-items-center">
-        <img src="../assets/retiro13.jpeg" alt="" class="imagem">
-      </div>
-      <div class="conteudo">
-        <h5 class="mt-5">Código de Conduta:</h5>
-        <p>O propósito do nosso código de conduta é ajudar nossa equipe a servir seu papel com espírito puro e proteger
-          nossos alunos e comunidade.</p>
-        <p>Não permitimos que nem um membro da nossa equipe, professores ou coordenadores, independente do contrato,
-          aluno ou visitante, maltrate qualquer pessoa por motivo de raça, etnia, cultura, nacionalidade, orientação
-          sexual, identidade de gênero ou deficiência.</p>
+    </div>
+    <div class="tab-pane fade" id="pills-politica" role="tabpanel" aria-labelledby="pills-politica-tab">
+      <div class="row">
+        <div class="col-12 d-flex flex-column justidy-content-center align-items-center text-center">
+          <div class="conteudo mt-5">
+            <h1>Política de Reembolso</h1>
+          </div>
+          <div class="conteudo">
+            <p>Entende-se como <b>CONTRATANTE</b> a pessoa física ou jurídica que realizar seu cadastro e/ou compra de
+              algum serviço de treinamento, feito em nosso website e será de agora em diante tratado na condição de
+              Aluno. Todo <b>CONTRATANTE</b> ao adquirir o curso/treinamento, seja na modalidade de aulas online ou nas
+              aulas presenciais estará concordando automaticamente com a ementa e condições expressas na página do
+              curso/treinamento contratado, bem como do material didático fornecido e condições para aprovação e
+              recebimento do certificado, quando o caso.</p>
 
-        <h5 class="mt-5">Prevenção ao Assédio Sexual:</h5>
-        <p>Assédio é um termo que compreende ser inaceitável qualquer tipo de relacionamento íntimo envolvendo
-          aluno/professor, ou qualquer tipo de favor sexual em decorrência das atividades desenvolvidas em nosso
-          recinto.</p>
+            <p>Esta Política se refere aos Termos e Condições para registro e/ou compra no nosso website. O
+              <b>CONTRATANTE</b> (ou Aluno) também estará de acordo com nossa Política de Privacidade e nossa Política
+              Antipirataria.
+            </p>
+            <p>
+              Dos produtos oferecidos: <br>
+              Treinamento presencial.<br>
+              Aulas online<br>
+              Retiros e workshops<br>
+              Formação de professores com certificado.
+            </p>
 
-        <h5 class="mt-5">Cláusulas Contratuais:</h5>
-        <p>O Tantra é conhecido por trabalhar diretamente com a energia sexual, POR ESSA RAZÃO O STUDIO INTEGRAL SP SE
-          RESERVA AO DIREITO DE CONDICIONAR CLARAMENTE COMO PRÉ REQUISITO PARA CONTRATAÇÃO DE SEUS SERVIÇOS, QUE TODO E
-          QUALQUER ALUNO CONTRATANTE SE ABSTENHA EXPRESSAMENTE DE ESTABELECER QUALQUER TIPO DE RELAÇÃO ÍNTIMA OU PESSOAL
-          COM OS PROFISSIONAIS QUE ATUAM DIRETA OU INDIRETAMENTE PARA A CONTRATADA, ANTES, DURANTE OU DEPOIS DA
-          REALIZAÇÃO DE AULAS, CURSOS OU RETIROS.</p>
+            <h5>CANCELAMENTOS</h5>
 
-        <h5 class="mt-5">Prevenção à Má Conduta Sexual:</h5>
-        <p>É inaceitável a má conduta sexual nos ambientes de aulas, cursos e eventos realizados pelo Studio Integral SP
-        </p>
-        <p>Má conduta sexual se refere a qualquer tipo de requerimento que envolva favores sexuais, toque sexual e
-          verbal, visual, ou conduta física que crie um ambiente hostil no ambiente da escola.</p>
+            <p>
+              Fica reservado ao <b>CONTRATANTE</b> (aluno) o direito de resilir, unilateralmente, o presente contrato,
+              no prazo de 07 (sete) dias a contar do aceite do presente instrumento podendo requerer formalmente através
+              de carta a devolução do valor integral pago.
+              No caso de aulas presenciais, no caso de descontos dados por pacotes semestrais ou trimestrais, os valores
+              serão devolvidos sem os descontos dados pela antecipação dos valores.
+              Sobre as aulas online, caso tenha assistido alguma aula, deverá ressarcir a Contratada no importe
+              correspondente ao treinamento iniciado;
+              Sobre as formações, uma vez iniciado o curso e com o recebimento do material didático, por ser o material
+              didática sendo parte inseparável do curso de formação, serão retidos os valores de 60% do valor do
+              pagamento antecipado, nos casos de pagamento mensal, deverão ser pagos uma multa de 60% das mensalidades
+              faltantes.
+              Em casos de Retiros e Workshops, se houver aluguel de espaço e alimentação, essa será descontada em sua
+              totalidade, e após isso, serão devolvidos os valores excedentes.
+              Parágrafo Primeiro. Passados os 07 dias, em caso de abandono ou cancelamento de contratação de pacotes
+              promocionais ou cursos em condições especiais, não haverá devolução dos valores pagos.
+            </p>
 
-        <h5 class="mt-5">Política de Reclamação:</h5>
-        <p>Quaisquer denúncias ou reclamações deverão ser formalizadas através do e-mail contato@studiointegral.com.br
-          ou reportadas diretamente ao professor responsável pelo curso.</p>
+            <h5>REEMBOLSO</h5>
+            <p>As solicitações de cancelamentos são analisadas de forma individual, levando em conta o contrato
+              adquirido, orçamento, forma de pagamento, motivo da solicitação e o status do (s) treinamento (s), ou
+              seja, treinamento (s) não agendado (s).</p>
+
+            <p>Desta forma, se o aluno (a) possuir direito ao reembolso, nosso departamento de retenção através de
+              documento formal, encaminhará às informações e procedimentos pertinentes a restituição.</p>
+
+            <h5>TROCAS</h5>
+            <p>Para análises referentes à troca de treinamentos, é necessário que o contrato esteja vigente, o curso em
+              aberto, ou seja, treinamentos não agendados e o pagamento concluído.</p>
+
+          </div>
+        </div>
       </div>
     </div>
   </div>
