--- a/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.scss
+++ b/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.scss
@@ -22,7 +22,7 @@ p, li, strong{
 
 .img-header{
   width: 100%;
-  height: 600px;
+  height: 500px;
   object-fit: cover;
   object-position: 0% 90%;
 
@@ -30,7 +30,7 @@ p, li, strong{
 
 .text-header{
   position: absolute;
-  top: 110px;
+  top: 170px;
   left: 50px;
 
   .main-text{
@@ -55,6 +55,10 @@ p, li, strong{
   color: #fff;
   font-size: 24px;
   font-weight: 600;
+}
+
+.img-main{
+  height: 500px;
 }
 
 .aulas{
@@ -97,7 +101,7 @@ p, li, strong{
     .card-content{
       position: relative;
       width: 280px;
-      height: 289px;
+      height: 349px;
       background-color: #fff;
       border-radius: 40px;
 
@@ -198,6 +202,11 @@ p, li, strong{
 
 
 @media (max-width: 600px){
+
+  .img-main{
+    height: 450px;
+    width: 100%;
+  }
 
   .img-aulas{
     border-radius: 30px;
