--- a/studio-integral/src/app/main/retiro/retiro.component.html
+++ b/studio-integral/src/app/main/retiro/retiro.component.html
@@ -400,70 +400,24 @@
         <p class="texto-preco">Sitio da Colina - Itapevi SP</p>
       </div>
       <div class="col-12 d-flex flex-column align-items-center p-0">
-        <h4>Promoção de lançamento</h4>
         <div class="d-flex justify-content-center">
           <div class="card-compra mx-3">
             <div class="card-content d-flex flex-column align-items-center justify-content-around">
-              <p class="text-center"><strong>Até dia 10 de Setembro <br> 1° Lote</strong></p>
+              <p class="text-center"><strong>Retiro Cura e Chakras</strong></p>
               <hr>
-              <p>Alunos da casa R$ 2.480,00</p>
-              <p>Não alunos R$ 2.890,00</p>
+              <p>R$ 2.890,00 à vista</p>
+              <p class="text-center">Ou 6x de R$ 518,00</p>
               <a href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Eu%20quero%20reservar%20minha%20vaga%20no%20retiro%20Cura%20e%20Chakras!"
                 target="_blank" class="btn-cta pb-4">
                 Reservar</a>
             </div>
-            <!-- <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
-              <p class="text-center">2° Lote</p>
-              <p>R$ 3.100,00</p>
-            </div> -->
-          </div>
-          <div class="card-compra mx-3">
-            <div class="card-content d-flex flex-column align-items-center justify-content-around">
-              <p class="text-center"><strong>A partir de 11 de Setembro <br> 2° Lote</strong></p>
-              <hr>
-              <p>Alunos e não alunos</p>
-              <p>R$ 3.100,00</p>
-              <a class="btn-cta-disabled pb-4">
-                Reservar</a>
-            </div>
-            <!-- <div class="card-content2 d-flex flex-column align-items-center justify-content-center">
-              <p class="text-center">2° Lote</p>
-              <p>R$ 3.100,00</p>
-            </div> -->
           </div>
         </div>
-        <p class="mt-3">Pagamento até 6x com juros no cartão.</p>
+        <p class="mt-3"></p>
       </div>
     </div>
   </div>
   <div class="container-fluid">
-    <!-- <div class="row my-3">
-      <div class="col-12 col-md-6 d-none d-sm-none d-md-block">
-        <img src="../assets/ebook-desktop.jpeg" alt="" class="img-ebook">
-      </div>
-      <div class="col-12 col-md-6 d-block d-sm-block d-md-none">
-        <img src="../assets/ebook-mobile.jpeg" alt="" class="img-ebook">
-      </div>
-      <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
-        <form>
-          <div class=" mb-3">
-            <label for="exampleFormControlInputName" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="exampleFormControlInputName" placeholder="Nome">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlInputEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInputEmail" placeholder="nome@email.com">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlInputEmail" class="form-label">Telefone</label>
-            <input type="email" class="form-control" id="exampleFormControlInputEmail" placeholder="(99) 99999-9999">
-          </div>
-          <div class="d-flex justify-content-center">
-            <button class="btn btn-primary btn-card " type="submit">Fazer download agora!</button>
-          </div>
-        </form>
-      </div>
-    </div> -->
     <div class="row  my-5">
       <div class="col-12">
         <h1 class="title-fotos text-center">Depoimento dos participantes</h1>
