--- a/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
+++ b/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.html
@@ -266,19 +266,18 @@
 <div class="d-none d-md-block">
   <div class="row  d-flex justify-content-center para-quem">
     <h1 class="text-center mb-4 pt-4">Para quem é o Retiro?</h1>
-    <div class="col-12 d-flex justify-content-center align-items-center">
-      <div class="col-4">
-        <div class="row mt-5 d-flex flex-column justify-content-start px-2">
+    <div class="col-12 d-flex justify-content-center align-items-start">
+      <div class="col-5">
+        <div class="row d-flex flex-column justify-content-start px-2">
           <p>Este retiro é para qualquer indivíduo que sinta o chamado de desligar a mente e acessar seu lado mais
             intuitivo, sua natureza mais real.</p>
           <p>Não há necessidade de ter prática anterior, nem precisa ser yogi, é para todos que querem aprender sobre
             esta
             filosofia de vida e iniciar sua jornada no caminho do autoconhecimento.</p>
           <p>É para aqueles praticantes que gostariam de fortalecer seu sadhana e se conectar com a energia espiritual.
-
           </p>
         </div>
-      </div>
+      </div>s
       <div class="col-2"> <img src="../assets/shakti1.png" class="img-shakti" alt=""></div>
     </div>
     <div class="col-12 d-flex justify-content-center">
@@ -289,9 +288,9 @@
 <div class="container d-block d-md-none">
   <div class="row d-flex justify-content-center para-quem">
     <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center mb-4 pt-4">Para quem é o Retiro?</h1>
+      <h1 class="text-center pt-4">Para quem é o Retiro?</h1>
       <div class="col-12">
-        <div class="row mt-5 d-flex flex-column justify-content-start px-2">
+        <div class="row d-flex flex-column justify-content-center align-items-center text-center px-2">
           <p>Este retiro é para qualquer indivíduo que sinta o chamado de desligar a mente e acessar seu lado mais
             intuitivo, sua natureza mais real.</p>
           <p>Não há necessidade de ter prática anterior, nem precisa ser yogi, é para todos que querem aprender sobre
