--- a/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.scss
+++ b/studio-integral/src/app/main/retiro-meditacao/retiro-meditacao.component.scss
@@ -47,7 +47,7 @@ p, li, strong{
 .btn-cta{
   width: 346px;
   padding: 10px;
-  background-color: #63C85A;
+  background-color: #e33838;
   text-align: center;
   text-decoration: none;
   border-radius: 40px;
