--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -50,164 +50,166 @@
       </button>
     </div>
   </section>
-  <section id="quem_somos ">
-    <div class="p-3 mt-3 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center">Quem somos?</h1>
-      <div class="text-limit">
-        <p class="text-center">Studio Integral é um espaço que nasceu com o objetivo de ser um refúgio para
-          aqueles que buscam saúde, auto conhecimento e espiritualidade. Somos uma Escola Internacional de Yoga Integral
-          na linhagem tântrica e a nossa missão é oferecer um trabalho personalizado e profissional, dentro dos valores
-          da meditação e os ensinamentos tradicionais da Sagrada Índia.
-        </p>
+  <section id="quem_somos" class="mt-5 container">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+          <h1 class="text-center">Quem somos?</h1>
+          <p class="text-center">Studio Integral é um espaço que nasceu com o objetivo de ser um refúgio para
+            aqueles que buscam saúde, auto conhecimento e espiritualidade. Somos uma Escola Internacional de Yoga Integral
+            na linhagem tântrica e a nossa missão é oferecer um trabalho personalizado e profissional, dentro dos valores
+            da meditação e os ensinamentos tradicionais da Sagrada Índia.
+          </p>
+        </div>
       </div>
     </div>
   </section>
-  <section id="servicos" class="mt-5">
-    <div class="container-fluid">
-      <h1 class="text-center">Nossos Serviços</h1>
+  <section id="servicos" class="mt-5 container">
+    <h1 class="text-center">Nossos Serviços</h1>
       <div class="row justify-content-center">
-
-        <div class="card  card-largura col-12 col-md-6 col-lg-6 m-5 p-0" style='position:relative; top:0px; left:0px;'>
-          <img src="../assets/card4.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="selo-gratuito" style='position:absolute; top:15px; left:15px;'>Gratuito</div>
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Meditação Lua Cheia</h3>
-            <p class="card-text text-center">A meditação da Lua Cheia é uma prática das escolas tradicionais que
-              cultuam a energia de Shakti, e um evento online gratuito que acontece toda lua cheia através do nosso
-              aplicativo online iTantra Club.</p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/meditacao-lua-cheia">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura" style='position:relative; top:0px; left:0px;'>
+            <img src="../assets/card4.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="selo-gratuito" style='position:absolute; top:15px; left:15px;'>Gratuito</div>
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Meditação Lua Cheia</h3>
+              <p class="card-text text-center">A meditação da Lua Cheia é uma prática das escolas tradicionais que
+                cultuam a energia de Shakti, e um evento online gratuito que acontece toda lua cheia através do nosso
+                aplicativo online iTantra Club.</p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/meditacao-lua-cheia">Saiba Mais</a>
+            </div>
           </div>
         </div>
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/massagem.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Terapias</h3>
-            <p class="card-text text-center my-3">Conheça nosso setor de terapias do studio, com diversas tecnicas de
-              massagem, banhos energéticos e leitura de Tarot. Todas com intuito de trazer cura, relaxamento e
-              direcionamentos aos participantes.
-            </p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/terapias">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/massagem.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Terapias</h3>
+              <p class="card-text text-center my-3">Conheça nosso setor de terapias do studio, com diversas tecnicas de
+                massagem, banhos energéticos e leitura de Tarot. Todas com intuito de trazer cura, relaxamento e
+                direcionamentos aos participantes.
+              </p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/terapias">Saiba Mais</a>
+            </div>
           </div>
         </div>
-
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Aulas Presenciais</h3>
-            <p class="card-text text-center my-3">Aulas presenciais com total atenção de nossos professores com
-              correções e ajustes, Studio localizado ao lado do Parque Aclimação.
-            </p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/aulas-presencial">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Aulas Presenciais</h3>
+              <p class="card-text text-center my-3">Aulas presenciais com total atenção de nossos professores com
+                correções e ajustes, Studio localizado ao lado do Parque Aclimação.
+              </p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/aulas-presencial">Saiba Mais</a>
+            </div>
           </div>
         </div>
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card2.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Aulas Online</h3>
-            <p class="card-text text-center my-3">Aulas Online ao vivo e diversas aulas gravadas. Treine onde e quando
-              quiser com horarios para encaixar em qualquer tipo de rotina.
-            </p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/aulas-online">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/card2.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Aulas Online</h3>
+              <p class="card-text text-center my-3">Aulas Online ao vivo e diversas aulas gravadas. Treine onde e quando
+                quiser com horarios para encaixar em qualquer tipo de rotina.
+              </p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/aulas-online">Saiba Mais</a>
+            </div>
           </div>
         </div>
         <!--
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card-3.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Curso de Meditação</h3>
-            <p class="card-text text-center">Neste curso você irá aprender os princípios básicos para se obter
-              sucesso
-              na prática de meditação, seja você um iniciante ou alguém que já medita há algum tempo e busca dar um
-              “up” na sua prática.</p>
-            <a class="btn btn-primary btn-card ms-4">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/card-3.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Curso de Meditação</h3>
+              <p class="card-text text-center">Neste curso você irá aprender os princípios básicos para se obter
+                sucesso
+                na prática de meditação, seja você um iniciante ou alguém que já medita há algum tempo e busca dar um
+                “up” na sua prática.</p>
+              <a class="btn btn-primary btn-card ms-4">Saiba Mais</a>
+            </div>
+          </div>
+        </div>-->
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/banner2.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Formação Internacional Yoga</h3>
+              <p class="card-text text-center">Este programa foi desenvolvido de forma a promover a filosofia prática
+                e
+                os valores fundamentais dos métodos tradicionais do Yoga (Raja Yoga, Bhakti Yoga, Jñana Yoga, Karma
+                Yoga
+                e Tantra Yoga).</p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/formacao">Saiba Mais</a>
+            </div>
           </div>
         </div>
- -->
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/banner2.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Formação Internacional Yoga</h3>
-            <p class="card-text text-center">Este programa foi desenvolvido de forma a promover a filosofia prática
-              e
-              os valores fundamentais dos métodos tradicionais do Yoga (Raja Yoga, Bhakti Yoga, Jñana Yoga, Karma
-              Yoga
-              e Tantra Yoga).</p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/formacao">Saiba Mais</a>
+        <div class="col-12 col-md-6 col-lg-4 mb-3">
+          <div class="card card-largura">
+            <img src="../assets/retiro4.jpeg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+              <h3 class="card-title text-center">Retiro Cura e Chakras</h3>
+              <p class="card-text text-center">O retiro Cura e Chakras é uma experiência intensa de autoconhecimento,
+                que tem como base a prática dos ensinamentos do Kalaripayattu (conhecida como o Yoga dos guerreiros do
+                sul da Índia) e as meditações do Sri Vidya Tantra.</p>
+              <a class="btn btn-primary btn-card ms-4" href="/main/retiro">Saiba Mais</a>
+            </div>
           </div>
         </div>
-
-        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/retiro4.jpeg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h3 class="card-title text-center">Retiro Cura e Chakras</h3>
-            <p class="card-text text-center">O retiro Cura e Chakras é uma experiência intensa de autoconhecimento,
-              que tem como base a prática dos ensinamentos do Kalaripayattu (conhecida como o Yoga dos guerreiros do
-              sul da Índia) e as meditações do Sri Vidya Tantra.</p>
-            <a class="btn btn-primary btn-card ms-4" href="/main/retiro">Saiba Mais</a>
-          </div>
-        </div>
-
-
+      </div>
+  </section>
+  <section id="metodo" class="mt-5 container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-center">O método iTantra</h1>
+        <p class="text-center">O método Itantra é uma orientação filosófica da tradição Sri Vidya Tantra, trazida da
+          Índia por Wal Nunes, que tem mais de 20 anos de experiência na prática e ensino em Yoga e Meditação, sendo
+          uma das primeiras professoras a trazer para o Brasil o ensino da arte marcial Kalaripayattu, de origem
+          tântrica, que influencia as práticas de Hatha Yoga e Tantra Yoga, com o objetivo de preparar e purificar o
+          corpo físico e energético (nadis e chakras) para a meditação.
+        </p>
+      </div>
+      <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+        <img src="../assets/metodo.jpg" loading="lazy" alt="" class="imagem imagem-metodo">
       </div>
     </div>
   </section>
-  <section id="metodo">
-    <div class="p-3 mt-3">
-      <div class="row">
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-center">O método iTantra</h1>
-          <p class="text-center">O método Itantra é uma orientação filosófica da tradição Sri Vidya Tantra, trazida da
-            Índia por Wal Nunes, que tem mais de 20 anos de experiência na prática e ensino em Yoga e Meditação, sendo
-            uma das primeiras professoras a trazer para o Brasil o ensino da arte marcial Kalaripayattu, de origem
-            tântrica, que influencia as práticas de Hatha Yoga e Tantra Yoga, com o objetivo de preparar e purificar o
-            corpo físico e energético (nadis e chakras) para a meditação.
+  <section id="objetivo" class="mt-5 container">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <h1 class="text-center">Nosso Objetivo</h1>
+        <div class=" ">
+          <p class="text-center">Ajudar o praticante a realizar um estado de consciência da meditação, se conhecendo
+            através do Ser Divino que há em todos seres.
+          </p>
+          <p class="text-center">Despertar a Kundalini que é a energia espiritual, por meio da transformação mental,
+            física e espiritual do indivíduo.
+          </p>
+          <p class="text-center">Despertar para uma essência individual e coletiva através do autoconhecimento.</p>
+          <p class="text-center">Treinar e capacitar pessoas que buscam se profissionalizar utilizando o método como
+            uma forma de trabalho e com certificação internacional renomada.
           </p>
         </div>
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
-          <img src="../assets/metodo.jpg" loading="lazy" alt="" class="imagem imagem-metodo">
-        </div>
       </div>
     </div>
   </section>
-  <section id="objetivo">
-    <div class="p-3 mt-3 mx-5-lg">
-      <div class="row">
-        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-center">Nosso Objetivo</h1>
-          <div class=" text-limit">
-            <p class="text-center">Ajudar o praticante a realizar um estado de consciência da meditação, se conhecendo
-              através do Ser Divino que há em todos seres.
-            </p>
-            <p class="text-center">Despertar a Kundalini que é a energia espiritual, por meio da transformação mental,
-              física e espiritual do indivíduo.
-            </p>
-            <p class="text-center">Despertar para uma essência individual e coletiva através do autoconhecimento.</p>
-            <p class="text-center">Treinar e capacitar pessoas que buscam se profissionalizar utilizando o método como
-              uma forma de trabalho e com certificação internacional renomada.
-            </p>
-          </div>
-        </div>
+  <section id="walnunes" class="mt-5 container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-12">
+        <h1 class="text-center">Quem é Wal nunes?</h1>
+        <p class="text-center ">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. Praticante há
+          mais de 20
+          anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
+          treino
+          iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
+        </p>
       </div>
-    </div>
-  </section>
-  <section id="walnunes">
-    <div class="mt-3">
-      <div class="row d-flex justify-content-center">
-        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
-          <p class="text-center text-limit">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. Praticante há
-            mais de 20
-            anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
-            treino
-            iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
-          </p>
-        </div>
-        <div class="col-12 mb-5 d-flex justify-content-center">
-          <iframe width="700" height="331" src="https://www.youtube.com/embed/_O-jph6Re1s"
-            title="Depoimento Cura e Chakras" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+      <div class="col-12 mb-5 d-flex justify-content-center">
+        <iframe width="700" height="331" src="https://www.youtube.com/embed/_O-jph6Re1s"
+          title="Depoimento Cura e Chakras" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
       </div>
     </div>
   </section>
