--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -67,7 +67,7 @@
   <section id="servicos" class="mt-5 container">
     <h1 class="text-center">Nossos Serviços</h1>
       <div class="row justify-content-center">
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura" style='position:relative; top:0px; left:0px;'>
             <img src="../assets/card4.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="selo-gratuito" style='position:absolute; top:15px; left:15px;'>Gratuito</div>
@@ -80,7 +80,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/massagem.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -105,7 +105,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/card2.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -118,7 +118,7 @@
           </div>
         </div>
         <!--
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/card-3.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -131,7 +131,7 @@
             </div>
           </div>
         </div>-->
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/banner2.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -145,7 +145,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
+        <div class="col-12 col-md-6 col-lg-4 mb-3 d-flex justify-content-center">
           <div class="card card-largura">
             <img src="../assets/retiro4.jpeg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
