restruturação do código

--- a/src/app/main/planos/planos.component.html
+++ b/src/app/main/planos/planos.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-      <h1>Planos e Preços</h1>
+      <h1 class="mt-5">Planos e Preços</h1>
       <div class="row  mb-5">
         <h5 class=" text-center mt-5 mb-3">Plano Mensal - Aulas Presenciais </h5>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
