--- a/src/app/main/codigo-de-etica/codigo-de-etica.component.html
+++ b/src/app/main/codigo-de-etica/codigo-de-etica.component.html
@@ -13,7 +13,7 @@
     </ul>
   </div>
 </div>
-<div class="container-fluid">
+<div class="container">
   <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-codigo" role="tabpanel" aria-labelledby="pills-codigo-tab">
       <div class="row">
@@ -26,7 +26,7 @@
               ensinamentos
               dos mestres antigos citados em livros Sagrados como Yoga Sutras de Patanjali.</p>
           </div>
-          <div class="div-imagem d-flex flex-column justidy-content-center align-items-center">
+          <div class="div-imagem d-flex flex-column justidy-content-center align-items-center my-5">
             <img src="../assets/retiro6.jpeg" alt="" class="imagem-codigo">
           </div>
           <div class="conteudo">
