--- a/src/app/main/mestres/mestres.component.html
+++ b/src/app/main/mestres/mestres.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-12 mb-5">
+    <div class="col-12 mt-5">
       <h1 class="text-center my-5">Mestres da linhagem</h1>
       <div class="row">
         <div class="col-12 col-md-6">
