--- a/src/app/main/presencial/presencial.component.html
+++ b/src/app/main/presencial/presencial.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row d-flex flex-column justify-content-center align-items-center">
-    <div class="col-12 d-flex flex-column align-items-center">
-      <h1 class=" my-5 pt-4">Aulas Presenciais</h1>
+    <div class="col-12 d-flex flex-column align-items-center mt-5">
+      <h1>Aulas Presenciais</h1>
       <div class="container-iframe">
         <iframe width="900" height="450" src="https://www.youtube.com/embed/jNSqy1C2_v4" title="Aulas Presenciais"
           frameborder="0"
@@ -9,26 +9,23 @@
           allowfullscreen></iframe>
       </div>
     </div>
-    <div class="col-12 d-flex flex-column align-items-center conteudo">
-      <h1 class="my-5 text-black text-center">Encontre a prática ideal para você!​</h1>
-      <p class="text-black text-center">Conecte corpo, mente e espírito através do Tantra.<br>Vivencie essa experiência
+    <div class="col-12 d-flex flex-column align-items-center mt-5">
+      <h1 class="text-center">Encontre a prática ideal para você!​</h1>
+      <p class="text-center">Conecte corpo, mente e espírito através do Tantra.<br>Vivencie essa experiência
         e entre no fluxo natural da vida. <br> Seu corpo é reflexo da sua alma.</p>
-      <p class="text-black text-center">O Studio Integral oferece um método que unifica as práticas tradicionais, o Yoga
+      <p class="text-center">O Studio Integral oferece um método que unifica as práticas tradicionais, o Yoga
         moderno e o Kalaripayattu (arte marcial ancestral ensinada nas escolas tântricas do sul da Índia). Com a
         unificação dessas práticas, surgiu nossa metodologia de ensino: o método iTantra. Uma metodologia inclusiva que
         facilita o desenvolvimento do aluno, independentemente da sua experiência dentro do universo do Yoga e da
         Meditação.</p>
       <div class="row d-flex">
-        <div class="col-12 d-flex justify-content-center my-4 py-3">
+        <div class="col-12 d-flex justify-content-center">
           <a class="btn btn-primary mx-4" href="/main/planos-e-precos">Preços</a>
           <a class="btn btn-primary mx-4" href="/main/aulas-presencial#view-horarios">Horarios</a>
         </div>
-        <div class="col-12 d-flex justify-content-center">
-
-        </div>
       </div>
     </div>
-    <div class="col-12  my-5">
+    <div class="col-12  mt-5">
       <div class="row d-flex align-items-center justify-content-center">
         <div class="col-12 col-md-5 d-flex flex-column align-items-center justify-content-center">
           <h2 class="text-center">Aula Experimental Gratuita</h2>
@@ -46,8 +43,8 @@
         </div>
       </div>
     </div>
-    <div class="col-12">
-      <div class="professores mt-5">
+    <div class="col-12 mt-5">
+      <div class="professores">
         <div class="mt-4 d-flex flex-column justify-content-center">
           <div class="row ">
             <div class="col-12 d-flex flex-column justify-content-center align-items-center">
@@ -97,7 +94,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12 d-flex flex-column align-items-center my-3 p-lg-5 horarios" id="view-horarios">
+    <div class="col-12 d-flex flex-column align-items-center mt-5 p-lg-5 horarios" id="view-horarios">
       <h1>Horarios</h1>
       <iframe src="https://app.glofox.com/portal/#/branch/605cb19ff9f3f065f15e2295/classes-list-view?header=classes"
         frameborder="0" width="100%" height="600"></iframe>
